Closed Bug 572287 Opened 14 years ago Closed 14 years ago

Don't leak mThebesComputationalSurface

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
Currently it leaks. This is a problem once we start tracking leaked surfaces.

The patch also renames the member to gThebesComputationalSurface.
Attachment #451472 - Flags: review?(jwatt)
Comment on attachment 451472 [details] [diff] [review]
fix

>+nsSVGUtils::Shutdown()
>+{
>+  NS_IF_RELEASE(gThebesComputationalSurface);
> }

Maybe null it out too?
Attachment #451472 - Flags: review?(jwatt) → review+
The NS_*_RELEASE macros null out their argument after releasing.
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/41553c0928e1
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: