Bug 572287. Fix leak of mThebesComputationalSurface. r=jwatt