layout/build/nsLayoutStatics.cpp
@@ -88,6 +88,9 @@
 #include "nsFrameList.h"
 #include "nsListControlFrame.h"
 #include "nsFileControlFrame.h"
+#ifdef MOZ_SVG
+#include "nsSVGUtils.h"
+#endif
 
 #ifdef MOZ_XUL
 #include "nsXULPopupManager.h"
@@ -321,6 +324,10 @@ nsLayoutStatics::Shutdown()
   nsFrame::DisplayReflowShutdown();
 #endif
   nsCellMap::Shutdown();
+
+#ifdef MOZ_SVG
+  nsSVGUtils::Shutdown();
+#endif
 
   // Release all of our atoms
   nsColorNames::ReleaseTable();
