layout/svg/base/src/nsSVGUtils.h
@@ -559,9 +559,11 @@ public:
   static PRBool NumberFromString(const nsAString& aString, float* aValue,
                                  PRBool aAllowPercentages = PR_FALSE);
 
+  static void Shutdown();
+
 private:
   /* Computational (nil) surfaces */
-  static gfxASurface *mThebesComputationalSurface;
+  static gfxASurface *gThebesComputationalSurface;
 };
 
 #endif
